[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/player/Player.gd" type="Script" id=1]
[ext_resource path="res://objects/player/coisa_1.png" type="Texture" id=2]
[ext_resource path="res://objects/arrow/arrow.png" type="Texture" id=3]
[ext_resource path="res://sounds/Laser_Shoot25.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/Explosion5.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 6.0

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Arrow" type="Sprite" parent="." index="2"]

texture = ExtResource( 3 )
offset = Vector2( 16, 0 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="PushBackRef" type="Position2D" parent="." index="3"]

position = Vector2( 23, 0 )
_sections_unfolded = [ "Transform" ]

[node name="BulletSpawnPosition1" type="Position2D" parent="." index="4"]

position = Vector2( 10, 0 )
_sections_unfolded = [ "Transform" ]

[node name="BulletSpawnPosition2" type="Position2D" parent="." index="5"]

position = Vector2( 10, 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="BulletSpawnPosition3" type="Position2D" parent="." index="6"]

position = Vector2( 10, -1 )
_sections_unfolded = [ "Transform" ]

[node name="AudioShoot" type="AudioStreamPlayer2D" parent="." index="7"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AudioExplosion" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="RespawnTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]


